--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .menu {
-  width: 100%;
-  height: 60%;
+  min-width: 100%;
+  height: 60px;
   background-color: #68b440;
   display: flex;
   align-items: center;
@@ -50,6 +50,13 @@ body {
 .main-title {
   font-size: 1.2em;
   text-align: center;
+  margin: 0 auto;
+  line-height: 50px;
+  max-width: fit-content;
+  overflow: hidden;
+  border-right: 0.15em solid #68b440;
+  white-space: nowrap;
+  animation: typing 2s steps(60, end), effect 0.75s step-end infinite;
 }
 .mint-style {
   background-color: #68b440;
@@ -68,10 +75,89 @@ body {
   margin: 10px;
 }
 .preview-img {
-  width: 50em;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .preview-img img {
   width: 100%;
   border-radius: 5px;
-  justify-self: center;
+}
+.advantages {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.advantages-title {
+  font-size: 1.7em;
+  text-align: center;
+}
+.advantages-item {
+  display: flex;
+  flex-direction: row;
+  background-color: #68b440;
+  width: 100%;
+}
+.advantages-item img {
+  width: 100px;
+  height: 100px;
+}
+.advantages-item-desc {
+  height: 100%;
+  margin: 15px;
+}
+.advantages-item-desc p {
+  text-align: center;
+  height: 100%;
+  font-size: 1.3em;
+}
+
+@media screen and (max-width: 1100px) {
+  .main-title {
+    font-size: 0.7em;
+  }
+  .advantages-item img {
+    width: 80px;
+    height: 80px;
+  }
+  .advantages-item-desc p {
+    font-size: 1em;
+  }
+  .preview-img {
+    width: 600px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .main-title {
+    font-size: 0.5em;
+  }
+
+  .advantages-title {
+    font-size: 1em;
+  }
+  .advantages {
+    flex-wrap: wrap;
+  }
+  .preview-img {
+    width: 97vw;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes effect {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #68b440;
+  }
 }
