--- a/styles/style.css
+++ b/styles/style.css
@@ -117,14 +117,45 @@ body {
   font-size: 1.3em;
   color: #1d1d1d;
 }
+.story-page {
+  background-color: #68b440;
+  color: white;
+  margin-top: 20px;
+  border-radius: 5px;
+  width: 50%;
+  transform: translateX(50%);
+  min-height: 320px;
+}
+.story-page-title {
+  font-size: 1.7em;
+  text-align: center;
+}
+.story-page-content {
+  margin-top: 20px;
+}
+.story-page-content a {
+  color: #1d1d1d;
+}
+.story-link {
+  text-align: center;
+  justify-self: center;
+  font-size: 1.7em;
+  padding: 10px;
+}
+.story-link img {
+  width: 80px;
+  height: 80px;
+  background-color: #68b440;
+  margin-left: 10px;
+}
 .download-container {
   margin-top: 20px;
   width: 50%;
   background-color: #68b440;
   transform: translateX(50%);
   border-radius: 5px;
-  padding-bottom: 50px;
   margin-bottom: 20px;
+  min-height: 320px;
 }
 .download-title {
   font-size: 1.7em;
@@ -137,23 +168,34 @@ body {
   text-align: center;
   justify-self: center;
   font-size: 1.7em;
-}
-.download-item table,
-th,
-td {
-  border: 3px solid rgb(255, 255, 255);
-  border-collapse: collapse;
-  padding: 30px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 .download-item a {
   color: #1d1d1d;
 }
+.download-item img {
+  width: 80px;
+  height: 80px;
+  background-color: #68b440;
+  margin-left: 10px;
+}
+
+/* FOR JS */
+
+.hidden {
+  opacity: 0;
+  transition: all 2s;
+}
+
+.visible {
+  opacity: 1;
+}
+
+/* MEDIA QUERIES */
+
 @media screen and (max-width: 1340px) {
-  .download-item table,
-  th,
-  td {
-    padding: 10px 40px;
-  }
   .download-title {
     font-size: 1.3em;
   }
@@ -172,21 +214,12 @@ td {
   .preview-img {
     width: 600px;
   }
-  .download-item table,
-  th,
-  td {
-    padding: 5px 15px;
-  }
 }
 @media screen and (max-width: 800px) {
   .main-title {
     font-size: 0.5em;
   }
-  .download-item table,
-  th,
-  td {
-    padding: 3.5px 10px;
-  }
+
   .advantages-title {
     font-size: 1em;
   }
@@ -195,13 +228,6 @@ td {
   }
   .preview-img {
     width: 97vw;
-  }
-}
-@media screen and (max-width: 668px) {
-  .download-item table,
-  th,
-  td {
-    padding: 2px 5px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -221,11 +247,12 @@ td {
   .download-container {
     width: 80%;
     transform: translateX(10%);
+    margin: 10px;
   }
-  .download-item table,
-  th,
-  td {
-    padding: 10px 20px;
+  .story-page {
+    width: 80%;
+    transform: translateX(10%);
+    margin: 10px;
   }
   .download-item {
     font-size: 1em;
@@ -247,5 +274,23 @@ td {
   }
   50% {
     border-color: #68b440;
+  }
+}
+
+@keyframes from-left {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes from-hidden {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
